# isro-bah

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js
artifacts/mockup-sandbox/: vite.config.ts
attached_assets/: Pasted-Cross-Modal-Satellite-Image-Retrieval-ML-Backend-Track-_1781807245899.txt  Pasted-I-have-a-Python-ML-project-for-ISRO-s-Bharatiya-Antarik_1781808457110.txt
bah2026-challenge11/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
bah2026-challenge11/.github/workflows/: ci.yml
bah2026-challenge11/app/: auth.py  cache.py  inference.py  main.py  models.py  supabase_client.py
bah2026-challenge11/ml/: dataset.py  evaluate.py  loss.py  model.py  model_factory.py  train.py
bah2026-challenge11/nginx/: nginx.conf
bah2026-challenge11/scripts/: build_index.py  evaluate.py  fetch_india_gee.py  supabase_schema.sql  upload_to_supabase.py
bah2026-challenge11/tests/: test_api.py  test_loss.py  test_model.py
bah2026-challenge11/tests/smoke/: run_smoke_tests.py  smoke_test_model.py
src/app/: globals.css  layout.js  page.js
src/app/api/search/: route.js
src/components/: ImageUpload.js  MapView.js  MetricsDashboard.js  ResultsGallery.js  SideBySideView.js  SystemLogs.js
